--- a/app/index.html
+++ b/app/index.html
@@ -1,53 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Ember Starter Kit</title>
-  <link rel="stylesheet" href="styles/normalize.css">
+  <meta charset="utf-8">
+  <title>Nils Stelte</title>
   <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
   <link rel="stylesheet" href="styles/main.css">
-  <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
 </head>
 <body>
 
   <script type="text/x-handlebars">
-    <div class="navbar">
-      <div class="navbar-inner">
-        <a class="brand" href="#">Nils</a>
-        <ul class="nav">
-          <li>{{#link-to 'posts'}}Posts{{/link-to}}</li>
-          <li>{{#link-to 'about'}}About{{/link-to}}</li>
-        </ul>
-      </div>
-    </div>
+    <h1><a href="#">Nils Stelte</a></h1>
+    <nav>
+      {{#link-to 'posts'}}Posts{{/link-to}}<br>
+      {{#link-to 'about'}}About{{/link-to}}
+    </nav>
+
+    <hr>
 
     {{outlet}}
   </script>
 
   <script type="text/x-handlebars" id="posts">
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span3">
-          <table class='table'>
-            <thead>
-              <tr><th>Recent Posts</th></tr>
-            </thead>
-            {{#each model}}
-            <tr><td>
-                {{#link-to 'post' this}}{{title}} <small class='muted'>by {{author.name}}</small>{{/link-to}}
-            </td></tr>
-            {{/each}}
-          </table>
-        </div>
-        <div class="span9">
-          {{outlet}}
-        </div>
-      </div>
-    </div>
+    <h3>Recent Posts</h3>
+
+    {{#each model}}
+        {{#link-to 'post' this}}{{title}} <small>by {{author.name}}</small>{{/link-to}}<br>
+    {{/each}}
+
+    <hr>
+
+    {{outlet}}
   </script>
 
   <script type="text/x-handlebars" id="posts/index">
-    <p class="text-warning">Please select a post</p>
+    <p>Please select a post</p>
   </script>
 
   <script type="text/x-handlebars" id="post">
@@ -66,24 +52,8 @@
   </script>
 
   <script type="text/x-handlebars" id="about">
-    <div class='about'>
-      <p>Yehuda Katz is a member of the <a href="http://emberjs.com">Ember.js</a>, <a href="http://rubyonrails.org">Ruby on Rails</a>
-      and <a href="http://www.jquery.com">jQuery</a> Core Teams; he spends his daytime hours at the startup he founded,
-      <a href="http://www.tilde.io">Tilde Inc.</a>.</p>
-      <p>Yehuda is co-author of best-selling <a href="http://affiliate.manning.com/idevaffiliate.php?id=485_176">jQuery in Action</a> and
-      <a href="http://affiliate.manning.com/idevaffiliate.php?id=485_145">Rails 3 in Action</a>.</p>
-      <p>He spends most of his time hacking on open source—his main projects, along with others, like <a href="https://github.com/wycats/thor">Thor</a>,
-      <a href="http://www.handlebarsjs.com">Handlebars</a> and <a href="https://github.com/carlhuda/janus">Janus</a>—or traveling the world doing evangelism work.</p>
-      <p>He can be found on Twitter as <a href="http://www.twitter.com/wycats">@wycats</a>.</p>
-    </div>
-
-    <div class='about'>
-      <p>My name is Tom Dale. I helped create <a href="http://www.emberjs.com/">Ember.js</a>, a JavaScript framework that brings sanity to the web.</p>
-
-      <p>In October of 2011, I co-founded <a href="http://www.tilde.io">Tilde</a> with Yehuda Katz, Leah Silber and Carl Lerche.</p>
-
-      <p>In my spare time I run a cash-for-beer exchange program at many local San Francisco dive bars.</p>
-    </div>
+    <h1>About</h1>
+      <p>This is the about page</p>
   </script>
 
   <script src="bower_components/jquery/jquery.js"></script>
