--- a/app/index.html
+++ b/app/index.html
@@ -56,17 +56,12 @@
 		{{outlet}}
 	</script>
 
-	<script type="text/x-handlebars" data-template-name="posts/index">
-		<p class="Template">[posts/index]</p>
-		<p>Please select a post</p>
-	</script>
-
 	<script type="text/x-handlebars" data-template-name="post">
 		<p class="Template">[post]</p>
 		{{#modal-dialog action="close"}}
 			<h1>{{title}}</h1>
 			{{format-markdown body}}
-			<button {{action "close"}}>Close</button>
+			<button class="Button Button--close" {{action close}}>Close</button>
 		{{/modal-dialog}}
 	</script>
 
