--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 		<p class="Template">[posts]</p>
 		<p><button class='Button'
 		         {{action viewAsGrid}}
-		         {{bindAttr disabled="viewingGrid"}}>View as a grid</button>
+		         {{bind-attr disabled="viewingGrid"}}>View as a grid</button>
 
 		 <button class='Button'
 		         {{action viewAsList}}
-		         {{bindAttr disabled="viewingList"}}>View as a list</button></p>
+		         {{bind-attr disabled="viewingList"}}>View as a list</button></p>
 
 
 
