Smart debugging with area css

--- a/app/index.html
+++ b/app/index.html
@@ -20,11 +20,11 @@
 	<script src="bower_components/ember-data/ember-data.js"></script>
 	<script src="bower_components/showdown/src/showdown.js"></script>
 
-	<!-- Your precompiled templates -->
+	<!-- Our application scripts
+		 Your build system needs to precompile templatess into this one.
+		 Unless you want one  billion templates in your index.html  -->
 	<script src="scripts/templates.js"></script>
-
-	<!-- Our application scripts -->
-	<script src="scripts/main.js"></script>
+	<script src="scripts/app.js"></script>
 	<script src="scripts/router.js"></script>
 	<script src="scripts/controller.js"></script>
 	<script src="scripts/model.js"></script>
