Split data per content type

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-	<h1>Gulp</h1>
+	<h1>Rough Ember</h1>
 
 	<!-- Dependencies -->
 	<script src="bower_components/jquery/jquery.js"></script>
@@ -30,7 +30,8 @@
 	<script src="scripts/model.js"></script>
 
 	<!-- Fixture data -->
-	<script src="scripts/data.js"></script>
+	<script src="data/page.js"></script>
+	<script src="data/post.js"></script>
 
 </body>
 </html>
