--- a/index.html
+++ b/index.html
@@ -6,110 +6,32 @@
 	<title>Rough Ember</title>
 	<link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
 	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="../dist/styles/main.css">
+	<!-- <link rel="stylesheet" href="styles/test.css"> -->
 </head>
 <body>
 
-	<script type="text/x-handlebars" data-template-name="application">
-		<p class="Template">[application]</p>
+	<h1>Rough Ember</h1>
 
-		<p>{{#link-to 'index'}}<strong>{{unbound siteTitle}}</strong>{{/link-to}}</p>
-
-		<p><button {{action 'toggleNavigation'}}>Toggle navigation</button></p>
-		<nav {{bind-attr class=":Default showNavigation:is-active"}}>
-			{{!-- include the navigation partial --}}
-			{{partial 'navigation'}}
-		</nav>
-
-		<p class="Template">[application/outlet]</p>
-		{{outlet}}
-
-		<p class="Template">[application/modal]</p>
-		{{outlet modal}}
-	</script>
-
-	<!-- Partials are prefixed with an underscore -->
-	<script type="text/x-handlebars" data-template-name="_navigation">
-		<p class="Template">[_navigation]</p>
-		{{#link-to 'posts'}}Posts{{/link-to}}
-		{{#link-to 'about'}}About{{/link-to}}
-	</script>
-
-	<script type="text/x-handlebars" data-template-name="index">
-		<p class="Template">[index]</p>
-		<h1>{{title}}</h1>
-		<div class="Body">{{format-markdown body}}</div>
-	</script>
-
-	<script type="text/x-handlebars" data-template-name="page">
-		<p class="Template">[page]</p>
-		<h1>{{unbound title}}</h1>
-		<div class="Body">{{unbound format-markdown body}}</div>
-	</script>
-
-	<script type="text/x-handlebars" data-template-name="posts">
-		<p class="Template">[posts]</p>
-		<p><button class='Button'
-		         {{action viewAsGrid}}
-		         {{bindAttr disabled="viewingGrid"}}>View as a grid</button>
-
-		 <button class='Button'
-		         {{action viewAsList}}
-		         {{bindAttr disabled="viewingList"}}>View as a list</button></p>
-
-
-
-		<ul {{bind-attr class=":Posts viewingGrid:Posts--grid viewingList:Posts--list"}}>
-		{{#each}}
-		<li {{bind-attr class=":Post isFeatured:is-featured"}}>
-			{{#link-to 'post' this}}{{unbound title}}{{/link-to}}
-		</li>
-		{{/each}}
-		</ul>
-
-		<p class="Template">[posts/modal]</p>
-		{{outlet}}
-	</script>
-
-	<script type="text/x-handlebars" data-template-name="post">
-		<p class="Template">[post]</p>
-		{{#modal-dialog action="close"}}
-			<h1>{{unbound title}}</h1>
-			{{unbound format-markdown body}}
-			<button class="Button Button--close" {{action close}}>&times;</button>
-		{{/modal-dialog}}
-	</script>
-
-	<script type="text/x-handlebars" data-template-name="modal">
-		<p class="Template">[modal]</p>
-
-		{{#modal-dialog action="close"}}
-			<p>title: {{unbound title}}</p>
-			<button {{action "close"}}>&times;</button>
-		{{/modal-dialog}}
-	</script>
-
-	<script type="text/x-handlebars" id="components/modal-dialog">
-		<p class="Template">[components/modal-dialog]</p>
-		<div class="Overlay" {{action "close"}}>
-			<div class="Modal" {{action bubbles=false}}>
-				{{yield}}
-			</div>
-		</div>
-	</script>
-
-	<script type="text/x-handlebars" data-template-name="loading">
-		<p>Loading…</p>
-	</script>
-
-
+	<!-- Dependencies -->
 	<script src="bower_components/jquery/jquery.js"></script>
 	<script src="bower_components/handlebars/handlebars.js"></script>
 	<script src="bower_components/ember/ember.js"></script>
 	<script src="bower_components/ember-data/ember-data.js"></script>
 	<script src="bower_components/showdown/src/showdown.js"></script>
 
-	<script src="scripts/main.js"></script>
-	<script src="scripts/data.js"></script>
+	<!-- Our application scripts
+		 Your build system needs to precompile templatess into this one.
+		 Unless you want one  billion templates in your index.html  -->
+	<script src="scripts/templates.js"></script>
+	<script src="scripts/app.js"></script>
+	<script src="scripts/router.js"></script>
+	<script src="scripts/controller.js"></script>
+	<script src="scripts/model.js"></script>
+
+	<!-- Fixture data -->
+	<script src="data/page.js"></script>
+	<script src="data/post.js"></script>
 
 </body>
 </html>
