Add weird missing script tags again

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,12 @@
 	<!-- The templates.js is created by our build system: Gulp. It puts all handlebars templates from /app/templates into one single file in a format that Ember understands -->
 	<script src="scripts/templates.js"></script>
 
+	<script src="scripts/helpers.js"></script>
+	<script src="scripts/app.js"></script>
+	<script src="scripts/router.js"></script>
+	<script src="scripts/controller.js"></script>
+	<script src="scripts/model.js"></script>
+
 	<!-- The content for our app -->
 	<script src="data/page.js"></script>
 	<script src="data/post.js"></script>
